data/derived/sp14/progs/unify/prog1022.ml.out
Characters 759-766:
  in let my_log = fun l' -> let l = max' 0.1 l' in (log l) / (log 10.0)
                                                   ^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
